@@ -1,4 +1,4 @@
-# $Id: aliaswiki.rb,v 1.4 2005-01-14 01:39:46 fdiary Exp $
+# $Id: aliaswiki.rb,v 1.5 2005-06-15 03:10:16 fdiary Exp $
 # Copyright (C) 2003 TAKEUCHI Hitoshi <hitoshi@namaraii.com>
 
 module Hiki
@@ -9,11 +9,11 @@ module Hiki
 
     attr_reader :aliaswiki_names
     
-    def initialize(db, conf)
-      @db = db
-      @conf = conf
+    def initialize(str)
       @aliaswiki_names = Hash::new
-      load_aliaswiki_names
+      (str || '').scan( ALIASWIKI_NAME_RE ) do |i|
+        @aliaswiki_names[i[0]] = i[1]
+      end
     end
 
     def aliaswiki(name)
@@ -23,14 +23,6 @@ module Hiki
     def original_name(alias_name)
       orig = @aliaswiki_names.key(alias_name)
       orig ? orig : alias_name
-    end
-
-    private
-    def load_aliaswiki_names
-      n = @db.load( @conf.aliaswiki_name ) || ''
-      n.scan( ALIASWIKI_NAME_RE ) do |i|
-        @aliaswiki_names[i[0]] = i[1]
-      end
     end
   end
 end
